2002-10-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (Circulate):
	(CMD_All):
	(CMD_Pick):
	Current, All, Pick, ThisWindow and PointerWindow imply the
	CirculateHitShaded condition.

2002-10-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_icon):
	fixed duplicate icon pixmap when switching from NoIconOverride to
	IconOverride

2002-10-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (AutoPlaceIcon):
	fixed random position of icon title for icons with a position hint

	* fvwm/fvwm2.1:
	corrected default of Use/NoIconPosition style

2002-10-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.4.13

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.11

2002-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed starting move at random position when pointer is on a different
	screen

2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CreateFlagString):
	fixed quoting in conditional command conditions

	* fvwm/bindings.c (ParseBinding):
	increased maximum allowed key symbol name length to 200 characters

	* fvwm/menus.c (paint_menu):
	fixed drawing problems with TiledPixmap and Solid MenuFace
	(pop_menu_up):
	fixed accidental menu animation with certain menu position hints

2002-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:
	increased version to 2.4.12

2002-09-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.11

	* fvwm/stack.c (__RaiseOrLowerWindow):
	fixed a core dump in the new stacking code

2002-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.4.11

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.10

2002-09-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	fixed hilighting of unfocused windows

2002-09-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (DeIconify):