@@ -1,3 +1,11 @@
+2002-10-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (__restack_window):
+	fixed a stacking problem with icons
+	(restack_windows):
+	fixed flickering when raising transients; can't prevent flickering when
+	lowering a window completely
+
 2002-10-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/conditional.c (Circulate):
